--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculator</h1>
+        <h1>Calculator by theGreatProgrammers</h1>
         <div class="calculator">
             <input type="text" name="screen" id="screen">
             <table>
