Worked More on Styling and Changed Background

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <!-- <img src="bg.jpg" alt=""> -->
         <h1>Calculator by theGreatProgrammers</h1>
         <div class="calculator">
             <input type="text" name="screen" id="screen">
-            <table>
+            <table> 
                 <tr>
                     <td><button>(</button></td>
                     <td><button>)</button></td>
