Solved problem with display and added clear all button

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <tr>
                     <td><button>(</button></td>
                     <td><button>)</button></td>
+                    <td><button>CE</button></td>
                     <td><button>C</button></td>
-                    <td><button>%</button></td>
                 </tr>
                 <tr>
                     <td><button>7</button></td>
