Added Trignometric Functions.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <input type="text" name="screen" id="screen">
             <table> 
                 <tr>
+                    <td><button>sin</button></td>
+                    <td><button>cos</button></td>
+                    <td><button>tan</button></td>
+                    <td><button>%</button></td>
+                </tr>
+                <tr>
                     <td><button>(</button></td>
                     <td><button>)</button></td>
                     <td><button>CE</button></td>
