Made it even more Scientific

--- a/index.html
+++ b/index.html
@@ -14,36 +14,42 @@
             <input type="text" name="screen" id="screen">
             <table> 
                 <tr>
+                    <td><button>log</button></td>
                     <td><button>sin</button></td>
                     <td><button>cos</button></td>
                     <td><button>tan</button></td>
                     <td><button>%</button></td>
                 </tr>
                 <tr>
+                    <td><button>&Sqrt;</button></td>
                     <td><button>(</button></td>
                     <td><button>)</button></td>
                     <td><button>CE</button></td>
                     <td><button>C</button></td>
                 </tr>
                 <tr>
+                    <td><button>x&sup2;</button></td>
                     <td><button>7</button></td>
                     <td><button>8</button></td>
                     <td><button>9</button></td>
                     <td><button>x</button></td>
                 </tr>
                 <tr>
+                    <td><button>^</button></td>
                     <td><button>4</button></td>
                     <td><button>5</button></td>
                     <td><button>6</button></td>
                     <td><button>-</button></td>
                 </tr>
                 <tr>
+                    <td><button>π</button></td>
                     <td><button>1</button></td>
                     <td><button>2</button></td>
                     <td><button>3</button></td>
                     <td><button>+</button></td>
                 </tr>
                 <tr>
+                    <td><button>x !</button></td>
                     <td><button>0</button></td>
                     <td><button>.</button></td>
                     <td><button>/</button></td>
