Made the calculator Responsive

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media ="screen and (max-width: 620px)" href="phone.css">
 </head>
 <body>
     <div class="container">
         <!-- <img src="bg.jpg" alt=""> -->
-        <h1>Calculator by theGreatProgrammers</h1>
+        <h1>Calculator by the Great Programmers</h1>
         <div class="calculator">
             <input type="text" name="screen" id="screen">
             <table> 
