added icons and improved colours and some bug fixed

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./icon.jpeg">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media ="screen and (max-width: 620px)" href="phone.css">
 </head>
 <body>
     <div class="container">
-        <!-- <img src="bg.jpg" alt=""> -->
         <h1>Calculator by the Great Programmers</h1>
         <div class="calculator">
             <input type="text" name="screen" id="screen">
@@ -25,8 +25,8 @@
                     <td><button>&Sqrt;</button></td>
                     <td><button>(</button></td>
                     <td><button>)</button></td>
-                    <td><button>CE</button></td>
-                    <td><button>C</button></td>
+                    <td><button>AC</button></td>
+                    <td><button>DEL</button></td>
                 </tr>
                 <tr>
                     <td><button>x&sup2;</button></td>
@@ -59,6 +59,6 @@
             </table>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 </html>
